--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -63,15 +63,7 @@ $all-transition: all 0.7s ease-in-out
     -o-transition: $transition
     
 
-@font-face
-    font-family: 'Neucha'
-    src: url('neucha-webfont.eot')
-    src: url('neucha-webfont.eot?#iefix') format('embedded-opentype')
-    src: url('neucha-webfont.woff') format('woff')
-    src: url('neucha-webfont.ttf') format('truetype')
-    src: url('neucha-webfont.svg#Neucha') format('svg')
-    font-weight: normal
-    font-style: normal
+@import 'font.css'
 
 html *, body *
     margin: 0
@@ -80,7 +72,7 @@ html *, body *
     outline: 0
 
 body
-    font-family: Neucha, 'Trebuchet MS', Helvetica, sans-serif
+    font-family: 'Neucha', 'Trebuchet MS', Helvetica, sans-serif
     color: lighten(#191919, 10%)
     font-size: 16px
     background: #fff
@@ -148,3 +140,9 @@ a
     left: 0
     width: 100%
     height: 100%
+    
+@font-face
+    font-family: 'Neucha'
+    src: local('Neucha'), url('neucha-webfont.eot'), url('neucha-webfont.eot?#iefix') format('embedded-opentype'), url('neucha-webfont.svg#neucharegular') format('svg'), url('neucha-webfont.woff') format('woff'), url('neucha-webfont.ttf') format('truetype')
+    font-weight: normal
+    font-style: normal
