--- a/slim/index.slim
+++ b/slim/index.slim
@@ -1,10 +1,10 @@
 doctype html
 html
     head
-        meta charset="utf-8"
+        meta http-equiv="Content-type" content="text/html; charset=utf-8"
         meta name="viewport" content="width=device-width, initial-scale=1.0"
 
-        title Existed | Экзистенциальная игра
+        title Экзистенциальная игра
         
         script src="js/jquery.js"
         script src="js/raphael.js"
@@ -44,5 +44,5 @@ html
                 | Игра интересна сама по себе. Она позволяет уйти от быта, заставляет учиться контроллировать свое время и оценивать верно свои силы. Это хороший опыт и довольно интересно.
                 br
                 br
-                b Удачи в игра ;-)
+                b Удачи в игре ;-)
         #canvas_container
