--- a/views/index.slim
+++ b/views/index.slim
@@ -9,8 +9,5 @@ html
     body
         #wrapper
             #existed
-                a href='#about'
-                    center
-                        img src='existed.jpg'
-
+                center: img src='existed.jpg'
             h1#about Экзистенциальная игра
