--- a/styles/style.sass
+++ b/styles/style.sass
@@ -1,11 +1,5 @@
 @import font.css
 
-html *, body *
-    margin: 0
-    padding: 0
-    resize: 0
-    outline: 0
-
 body
     font-family: 'Neucha', 'Trebuchet MS', Helvetica, sans-serif
     color: lighten(#191919, 10%)
@@ -13,9 +7,14 @@ body
     background: #fff
 
 #wrapper
+    // background: lime
     margin: 0 auto
     max-width: 800px 
-    padding: 5% 15px 0
+    padding:
+        top: 5%
+        right: 15px
+        left: 15px
+
     position: relative
     z-index: 2 
 
@@ -29,13 +28,13 @@ body
         
         img 
             max-width: 100%
-            margin-bottom: 35px 
 
     h1
         color: #191919
         font-size: 400%
         text-align: center
         margin-bottom: 20%
+        line-height: 0
         
         @media screen and (max-width: 600px)
             font-size: 24px
