Little bit more backend

--- a/views/index.slim
+++ b/views/index.slim
@@ -4,23 +4,31 @@ html
     head
         meta http-equiv='Content-type' content='text/html; charset=utf-8'
         meta name='viewport' content='width=device-width, initial-scale=1.0'
-        title Экзистенциальная игра
+        title #{$title}
         link rel='stylesheet' href='style.css' type='text/css'
     body
         #main-side
-            img.userpic src="http://my-art.biz/uploads/posts/2009-02/1234116129_kubizm.jpg"/
-            h1.maintitle Блог Никиты
+            img.userpic src="/existed.jpg"/
+            h1.maintitle #{$title}
             p.about
-             | Existed.
+             | #{$description}
              
             ul.top-links
                 li: a href="#tags" Теги
                 li: a href="#favs" Избранное
                 li: a.everything href="#list" Задания
             #articles
-                .article
-                    h1.rtclttl.favorited
-                        img.img-fav src="#{@images}row 6/1.png"/ title="В избранном"
-                        a href="#" Егвений Алехин «Третья штанина»
-                    span.timeinfo 5 января, после полуночи
-                    p.rtclmsg Текст
+                - if $articles.empty?
+                    p Заметок нет
+                - else
+                    - $articles.each do |article|
+                        .article
+                            - if article[:fav] == 1
+                                h1.rtclttl.favorited
+                                    img.img-fav src="#{@images}row 6/1.png"/ title="В избранном"
+                                    a href="#{article[:url]}" #{article[:title]}
+                            - else
+                                h1.rtclttl
+                                    a href="#{article[:url]}" #{article[:title]}
+                            span.timeinfo #{article[:date]}
+                            p.rtclmsg #{article[:text]}
