--- a/views/index.slim
+++ b/views/index.slim
@@ -1,6 +1,14 @@
-#existed
-  a href='#about'
-    center
-      img src='existed.jpg'
+doctype html
+html
+  head
+    meta http-equiv='Content-type' content='text/html; charset=utf-8'
+    meta name='viewport' content='width=device-width, initial-scale=1.0'
+    title Экзистенциальная игра
+    link rel='stylesheet' href='/style.css' type='text/css'
 
-h1#about Экзистенциальная игра
+  body: #wrapper: #existed
+    a href='#about'
+      center
+        img src='existed.jpg'
+
+    h1#about Экзистенциальная игра
