--- a/views/blog.slim
+++ b/views/blog.slim
@@ -1,6 +1,6 @@
 doctype html
 html
-  head
+  /head
     title = ($f.title @id unless @id == '*') || $f.name
     meta http-equiv='Content-Type' content='text/html; charset=utf-8'
     meta name='viewport' content='width=device-width, initial-scale=1.0'
@@ -17,7 +17,7 @@ html
     link id='jouele-swf-object' href='http://raw.github.com/happyworm/jplayer/master/jquery.jplayer/Jplayer.swf'
     script src='http://raw.github.com/happyworm/jplayer/master/jquery.jplayer/jquery.jplayer.js'
     script src='http://raw.github.com/ilyabirman/jouele/master/jouele/jouele.js'
-  body
+  /body
     / Header
     - if @id == '*' and @page == 1
       .header = $f.name
@@ -34,3 +34,5 @@ html
     - if $f.check(@id, @page)
       .nav.next: a href="#{$f.link @page.next, '~'}" = "№#{@page.next}"
     br
+  body
+    = @user
