--- a/views/blog.slim
+++ b/views/blog.slim
@@ -1,17 +1,16 @@
 doctype html
 html
-  /head
-    title = ($f.title @id unless @id == '*') || $f.name
+  head
+    title = $blog.data('title')
     meta http-equiv='Content-Type' content='text/html; charset=utf-8'
     meta name='viewport' content='width=device-width, initial-scale=1.0'
-    meta name='author' content='#{$f.author}'
-    meta name='description' content='#{$f.description}'
+    meta name='author' content='#{$blog.data('author')}'
+    meta name='description' content='#{$blog.data('description')}'
     link rel='shortcut icon' href='/favicon.ico'
     link rel='stylesheet' href='/fizzy.css'
-    link rel='alternate' type='application/rss+xml' title='#{$f.name}' href='#{$f.url}rss/'
-    link rel='stylesheet' href='http://fonts.googleapis.com/css?family=PT+Mono|PT+Serif:400,700,400italic,700italic&subset=latin,cyrillic'
+    link rel='alternate' type='application/rss+xml' title='#{$blog.data('title')}' href='#{$blog.data('url')}rss/'
     script src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.mаin.js'
-    script src='/main.js'
+    script src='/script.js'
     / Jouele
     link rel='stylesheet' href='/jouele/jouele.css'
     link id='jouele-swf-object' href='http://raw.github.com/happyworm/jplayer/master/jquery.jplayer/Jplayer.swf'
@@ -19,20 +18,13 @@ html
     script src='http://raw.github.com/ilyabirman/jouele/master/jouele/jouele.js'
   /body
     / Header
-    - if @id == '*' and @page == 1
-      .header = $f.name
+    - if @url == ''
+      .header = $blog.data('title')
     - else
-      .header: a href='#{$f.url}' = $f.name
+      .header: a href='#{$blog.data('url')}' = $blog.data('name')
     / Previous page
     - unless @page == 1
-      .nav.prev: a href="#{$f.link @page.pred, '~'}" = "№#{@page.pred}"
+      .nav.prev: a href="#{$blog.data('link') @page.pred, '~'}" = "№#{@page.pred}"
     / Content
-    .page
-      - $f.show(@id, @page).each do |path|
-        .post == $f.post path, @id
-    / Next page
-    - if $f.check(@id, @page)
-      .nav.next: a href="#{$f.link @page.next, '~'}" = "№#{@page.next}"
-    br
-  body
-    = $blog
+
+    = @url
