--- a/views/fizzy/blog.slim
+++ b/views/fizzy/blog.slim
@@ -16,12 +16,12 @@ html
     link id='jouele-swf-object' href='http://raw.github.com/happyworm/jplayer/master/jquery.jplayer/Jplayer.swf'
     script src='http://raw.github.com/happyworm/jplayer/master/jquery.jplayer/jquery.jplayer.js'
     script src='http://raw.github.com/ilyabirman/jouele/master/jouele/jouele.js'
-  /body
+  body
     / Header
     - if @url == ''
       .header = $blog.data('title')
     - else
-      .header: a href='#{$blog.data('url')}' = $blog.data('name')
+      .header: a href='/#{$blog.data('url')}' = $blog.data('title')
     / Content
 
-    = @url
+    = $content
