--- a/pages/index.slim
+++ b/pages/index.slim
@@ -3,11 +3,11 @@ html
   head
     meta http-equiv='Content-type' content='text/html; charset=utf-8'
     meta name='viewport' content='width=device-width, initial-scale=1.0'
-    title Экзистенциализм
+    title Aegea Hosting
     link rel='stylesheet' href='/style.css' type='text/css'
 
   body: #wrapper: #existed
-    center
-      img src='existed.jpg'
+    center: img src='existed.jpg'
 
-    h1#about Экзистенциализм
+    h1 Existed
+    h2 Aegea Hosting
