--- a/pages/style.sass
+++ b/pages/style.sass
@@ -7,7 +7,7 @@ html *, body *
     outline: 0
 
 body
-    font-family: 'Neucha', 'Trebuchet MS', Helvetica, sans-serif
+    font-family: Helvetica, sans-serif
     color: lighten(#191919, 10%)
     font-size: 16px
     background: #fff
@@ -34,5 +34,10 @@ body
     h1
         color: #191919
         font-size: 400%
+        font-weight: bold
         text-align: center
-        margin-bottom: 20%
+
+    h2
+        @extend h1
+        font-weight: 400
+        font-size: 200%
