--- a/pages/index.slim
+++ b/pages/index.slim
@@ -1,13 +1,12 @@
 doctype html
 html
-  head
-    meta http-equiv='Content-type' content='text/html; charset=utf-8'
-    meta name='viewport' content='width=device-width, initial-scale=1.0'
-    title Aegea Hosting
-    link rel='stylesheet' href='/style.css' type='text/css'
+    head
+        meta http-equiv='Content-type' content='text/html; charset=utf-8'
+        meta name='viewport' content='width=device-width, initial-scale=1.0'
+        link rel='stylesheet' href='/style.css' type='text/css'
+        title Aegea Hosting
 
-  body: #wrapper: #existed
-    center: img src='existed.jpg'
-
-    h1 Existed
-    h2 Aegea Hosting
+    body
+        center: img src='existed.jpg'
+        h1 Existed
+        h2 Aegea Hosting
