--- a/pages/style.sass
+++ b/pages/style.sass
@@ -1,6 +1,6 @@
 @import font.css
 
-html *, body *
+*
     margin: 0
     padding: 0
     resize: 0
@@ -21,17 +21,14 @@ body
     max-height: 425px
     text-align: center
     padding: 5% 15px 0
-        
     img 
         max-width: 100%
         margin-bottom: 35px 
-
     h1
         color: #191919
         font-size: 400%
         font-weight: bold
         text-align: center
-
     h2
         @extend h1
         font-weight: 400
